Revision history for Redis

{{$NEXT}}

1.961     2013-01-23T15:09:47Z
    * Add wait_one_response() for better pipeline management

1.960     2013-01-23T11:28:40Z
    * Make the new() name parameter safe to use with all redis-
      server versions

1.959     2013-01-22T14:46:42Z
    * __try_read_sock: test error conditions more thoroughly (issue #31)
    * Improve Test::SpawnRedisServer: multi-server support
    * tidyall the code and docs

1.958     2013-01-15T16:54:40Z
    * Support for name constructor parameter, set connection name
    * Add documentation for CLIENT * commands
    * Improve reliability of Test::SpawnRedisServer

1.957     2013-01-15T13:18:07Z
    * Fix minimum Perl version

1.956     2013-01-15T10:35:10Z
    * Add on_connect callback to Redis constructor (issue 28)
    * Make sure quit() doesn't die when the socket is already dead (issue 30);
    * Switch to Digest::SHA, one less non-core dep RT#81841
    * Try and make Travis-CI more useful, ask for a redis-server
    * Update SUPPORT section, moving bugtracker to GitHub issues

1.955     2012-10-10T11:43:44Z
    * Skip 30-scripts.t if the redis-server found lacks script support

1.954     2012-10-10T11:16:22Z
    * Support for multi-word commands such as "SCRIPT LOAD".
    * Try another fix for Windows non-blocking reads

1.953     2012-09-05T00:49:11Z
    * Tweak travis.ci setup

1.952     2012-09-04T11:22:18Z
    * Added automatic authentication after connection establishment
    * Support Redis 2.6: Aaron Crane <arc@cpan.org>
    * Attempt to fix non-blocking read on Windows
    * Enable travis.ci support on the repository

1.951     2012-03-13T10:17:09Z
    * Remove Tie::StdHash from our dependencies list, its part of core
      and it creates problems with some CPAN clients

1.950     2012-03-12T13:54:10Z
    * DEPRECATED: the encoding attribute to new() - we will not support
      automatic decoding after 2.000, so please test your code with
      encoding => undef now.