@@ -27,7 +27,21 @@ subtest 'client_{set|get}name commands' => sub {
 
 subtest 'client name via constructor' => sub {
   ok(my $r = Redis->new(server => $srv, name => 'buuu'), 'connected to our test redis-server, with a name');
-  is($r->client_getname, 'buuu', '... name was properly set');
+  is($r->client_getname, 'buuu', '...... name was properly set');
+
+  ok($r = Redis->new(server => $srv, name => sub {"cache-for-$$"}), '... with a dynamic name');
+  is($r->client_getname, "cache-for-$$", '...... name was properly set');
+
+  ok($r = Redis->new(server => $srv, name => sub {undef}), '... with a dynamic name, but returning undef');
+  is($r->client_getname, undef, '...... name was not set');
+
+  my $generation = 0;
+  for (1 .. 3) {
+    ok($r = Redis->new(server => $srv, name => sub { "gen-$$-" . ++$generation }),
+      "Using dynamic name, for generation $generation");
+    my $n = "gen-$$-$generation";
+    is($r->client_getname, $n, "... name was set properly, '$n'");
+  }
 };
 
 
