@@ -1,6 +1,7 @@
 Revision history for Redis
 
 {{$NEXT}}
+    * Parameter name to new() can be a CodeRef, dynamic connection names
 
 1.961     2013-01-23T15:09:47Z
     * Add wait_one_response() for better pipeline management
